--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Rinha de Front-end</title>
   </head>
   <body>
-    <main
+    <!-- <main
       class="flex min-h-screen flex-col items-center justify-center gap-6 p-4 text-center"
     >
       <h1 class="text-5xl font-bold">JSON Tree Viewer</h1>
@@ -22,6 +22,47 @@
       >
         Load JSON
       </button>
+    </main> -->
+
+    <main class="m-auto flex max-w-2xl flex-col gap-2 p-6">
+      <h1 class="mb-2 text-3xl">alltypes.json</h1>
+
+      <div id="json" class="font-normal"></div>
+      
+      <div class="mt-8">
+        <div>
+          <span class="text-accent">Actors: </span>
+          <span class="font-bold text-brackets">[</span>
+        </div>
+
+        <div class="relative pl-4 text-gray-200">
+          <span>0:</span>
+          <!-- Line -->
+          <span
+            class="absolute left-0 h-full w-[1px] origin-top-left scale-y-[400%] border-l-[1px] border-gray-200"
+          ></span>
+        </div>
+
+        <div class="relative ml-8">
+          <span class="text-accent">name: </span><span>"Tom Cruise"</span>
+          <!-- Line -->
+          <span
+            class="absolute -left-4 h-full w-[1px] origin-top-left scale-y-[300%] border-l-[1px] border-gray-200"
+          ></span>
+        </div>
+
+        <div class="ml-8">
+          <span class="text-accent">age: </span><span>56</span>
+        </div>
+
+        <div class="ml-8">
+          <span class="text-accent">Born At: </span><span>"Syracuse, NY"</span>
+        </div>
+
+        <div>
+          <span class="font-bold text-brackets">]</span>
+        </div>
+      </div>
     </main>
 
     <script type="module" src="/src/main.ts"></script>
