--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <p id="load-json-error" class="text-invalid hidden">Invalid file. Please load a valid JSON file.</p>
     </main>
 
-    <main id="json-page" class="m-auto hidden max-w-2xl flex-col gap-2 p-6">
+    <main id="json-page" class="m-auto hidden max-w-2xl flex-col gap-2 p-6 whitespace-nowrap">
       <h1 id="json-name" class="mb-2 text-3xl">alltypes.json</h1>
 
       <div id="json"></div>
