feat: improve JsonRenderer performance
fix: Virtualizer range

--- a/index.html
+++ b/index.html
@@ -32,10 +32,15 @@
         Load JSON
       </button>
 
-      <p id="load-json-error" class="text-invalid hidden">Invalid file. Please load a valid JSON file.</p>
+      <p id="load-json-error" class="hidden text-invalid">
+        Invalid file. Please load a valid JSON file.
+      </p>
     </main>
 
-    <main id="json-page" class="m-auto hidden max-w-2xl flex-col gap-2 p-6 whitespace-nowrap">
+    <main
+      id="json-page"
+      class="m-auto hidden max-w-2xl flex-col gap-2 whitespace-nowrap p-6"
+    >
       <h1 id="json-name" class="mb-2 text-3xl">alltypes.json</h1>
 
       <div id="json"></div>
